# sky360lib

./: CMakeLists.txt  README.md  test.py  testQhy.py  testQhyAE.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: create-diagram.yml
api/: CMakeLists.txt
api/bgs/: CoreBgs.cpp  CoreBgs.hpp  CoreParameters.hpp  bgs.hpp  bgsUtils.hpp
api/bgs/WeightedMovingVariance/: WMVColorGenerator.cpp  WMVColorThresholdGenerator.cpp  WMVCuda.cu  WMVHalideGenerator.cpp  WMVMonoGenerator.cpp  WMVMonoThresholdGenerator.cpp  WeightedMovingVariance.cpp  WeightedMovingVariance.hpp  WeightedMovingVarianceCL.cpp  WeightedMovingVarianceCL.hpp  WeightedMovingVarianceCuda.cpp  WeightedMovingVarianceCuda.hpp  WeightedMovingVarianceHalide.cpp  WeightedMovingVarianceHalide.hpp  WeightedMovingVarianceUtils.hpp
api/bgs/vibe/: Vibe.cpp  Vibe.hpp  VibeMonoGenerator.cpp  VibeUtils.hpp
api/blobs/: connectedBlobDetection.cpp  connectedBlobDetection.hpp
api/camera/: qhyCamera.cpp  qhyCamera.hpp  qhy_camera.cpp  qhy_camera.hpp
api/include/: CoreBgs.cpp  Vibe.cpp  VibeBGS.hpp  VibeBGSUtils.hpp  WeightedMovingVariance.hpp  core.hpp  coreUtils.hpp  pcg32.hpp  profiling.hpp
api/src/: VibeBGS.cpp
api/tracking/: trackerCSRT.cpp  trackerCSRT.hpp  trackerCSRTSegmentation.cpp  trackerCSRTUtils.cpp  trackerCSRTUtils.hpp
api/utils/: ImageAssessMetric.cpp  ImageAssessMetric.h  ImageQualityEstimator.cpp  ImageQualityEstimator.hpp  autoExposure.hpp  autoExposureControl.hpp  autoWhiteBalance.hpp  auto_exposure.hpp  auto_white_balance.hpp  bin_image.hpp  brightness.hpp  brightness_estimator.hpp  entropy_estimator.hpp  image_stacker.hpp  noiseEsimator.hpp  profiler.hpp  sub_sampler.hpp  textWriter.hpp  utils.hpp
apps/demo/: CMakeLists.txt
apps/demo/src/: demoTracker.hpp  demoUtils.hpp  demoVideoTracker.hpp  demo_main.cpp  demo_qhy_camera.cpp  qhy_camera_loop.cpp
wrapper/python/: ndarray_converter.cpp  ndarray_converter.h  sky360library_module.cpp
